fix formatting bug on smaller window size

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,5 @@
 body {
     background: radial-gradient(#dcb42dc1, #62a12fd3);
-    /* background-image: url("/images/tabletop.jpg"); */
     background-size: cover;
     position: relative;
     bottom: 20px;
@@ -33,10 +32,10 @@ body::after {
 
 @keyframes MOVE-BG {
     from {
-        background-position: left top; background-size: 130%;
+        background-position: left top; background-size: 230%;
     }
     to { 
-        background-position: right top; background-size: 130%;
+        background-position: right top; background-size: 230%;
     }
  }
 
